syntax = "proto3";

package pb;

import "user.proto";

option go_package="grpc-combine-rest/proto";

message CreateUserRequest {
  string user_name = 1;
  string full_name = 2;
  string email = 3;
  string password = 4;
}

message CreateUserResponse {
  User user = 1;
}